[package]
name = "winvec"
version = "0.1.1"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
repository = "https://github.com/ajmwagar/winvec-rs"
description = "Windowed Vector (TTL) Collection for Rust"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
